{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 121,
  "lineage": "9ebde224-9f8b-4574-5b16-083cffb038ea",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-02-19T11:42:05.025-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/ahmed-mossad/global/firewalls/http",
            "log_config": [],
            "name": "http",
            "network": "https://www.googleapis.com/compute/v1/projects/ahmed-mossad/global/networks/vpc-network",
            "priority": 1000,
            "project": "ahmed-mossad",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ahmed-mossad/global/firewalls/http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc-network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-02-19T11:42:05.332-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/ahmed-mossad/global/firewalls/ssh",
            "log_config": [],
            "name": "ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/ahmed-mossad/global/networks/vpc-network",
            "priority": 1000,
            "project": "ahmed-mossad",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ahmed-mossad/global/firewalls/ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc-network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20230206",
                    "labels": {
                      "my_label": "value"
                    },
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/ahmed-mossad/zones/us-central1-a/disks/test"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/ahmed-mossad/zones/us-central1-a/instances/test",
            "instance_id": "2099621274364921204",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "dtKAnVnQZqI=",
            "metadata_startup_script": "#!/bin/bash\n#Preperation to install gcloud and kubectl into the vm\n\n#install gcloud to the private vm\nsudo apt-get install  -y apt-transport-https ca-certificates gnupg\necho \"deb [signed-by=/usr/share/keyrings/cloud.google.gpg] https://packages.cloud.google.com/apt cloud-sdk main\" | sudo tee -a /etc/apt/sources.list.d/google-cloud-sdk.list\ncurl https://packages.cloud.google.com/apt/doc/apt-key.gpg | sudo apt-key --keyring /usr/share/keyrings/cloud. [...]
            "name": "test",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "104.198.216.195",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/ahmed-mossad/global/networks/vpc-network",
                "network_ip": "10.0.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/ahmed-mossad/regions/us-central1/subnetworks/management",
                "subnetwork_project": "ahmed-mossad"
              }
            ],
            "project": "ahmed-mossad",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/ahmed-mossad/zones/us-central1-a/instances/test",
            "service_account": [
              {
                "email": "instance-sa@ahmed-mossad.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "bar",
              "foo"
            ],
            "tags_fingerprint": "1gqCRgrww4E=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_network.vpc-network",
            "google_compute_subnetwork.management",
            "google_service_account.instance-sa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc-network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/ahmed-mossad/global/networks/vpc-network",
            "mtu": 0,
            "name": "vpc-network",
            "project": "ahmed-mossad",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ahmed-mossad/global/networks/vpc-network"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "bgp": [
              {
                "advertise_mode": "DEFAULT",
                "asn": 64514,
                "keepalive_interval": 20
              }
            ],
            "creation_timestamp": "2023-02-19T11:42:19.510-08:00",
            "encrypted_interconnect_router": false,
            "id": "projects/ahmed-mossad/regions/us-central1/routers/my-router",
            "name": "my-router",
            "network": "https://www.googleapis.com/compute/v1/projects/ahmed-mossad/global/networks/vpc-network",
            "project": "ahmed-mossad",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ahmed-mossad/regions/us-central1/routers/my-router"
          },
          "dependencies": [
            "google_compute_network.vpc-network",
            "google_compute_subnetwork.management"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "ahmed-mossad/us-central1/my-router/nat-router",
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "nat-router",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "ahmed-mossad",
            "region": "us-central1",
            "router": "my-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_network.vpc-network",
            "google_compute_router.router",
            "google_compute_subnetwork.management"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "management",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-02-19T11:42:05.934-08:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/ahmed-mossad/regions/us-central1/subnetworks/management",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "management",
            "network": "https://www.googleapis.com/compute/v1/projects/ahmed-mossad/global/networks/vpc-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "ahmed-mossad",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ahmed-mossad/regions/us-central1/subnetworks/management",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc-network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "restricted",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-02-19T11:42:05.817-08:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/ahmed-mossad/regions/us-central1/subnetworks/restricted",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "restricted",
            "network": "https://www.googleapis.com/compute/v1/projects/ahmed-mossad/global/networks/vpc-network",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "ahmed-mossad",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.48.0.0/14",
                "range_name": "pods"
              },
              {
                "ip_cidr_range": "10.52.0.0/20",
                "range_name": "service"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/ahmed-mossad/regions/us-central1/subnetworks/restricted",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc-network"
          ]
        }
      ]
    }
  ]
}